--- a/MovieDB/MovieDB/Base.lproj/Main.storyboard
+++ b/MovieDB/MovieDB/Base.lproj/Main.storyboard
@@ -20,17 +20,16 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="zyx-zo-31B">
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <color key="separatorColor" systemColor="systemGray5Color"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MoviesListItemViewCell" rowHeight="136" id="Z5M-lR-uUc" customClass="MoviesListItemViewCell" customModule="MovieDB" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="MoviesListItemViewCell" rowHeight="136" id="Z5M-lR-uUc" customClass="MoviesListItemViewCell" customModule="MovieDB" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="414" height="136"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Z5M-lR-uUc" id="fTW-Gb-EQa">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="136"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="VPt-RJ-Xya">
-                                                    <rect key="frame" x="30" y="23" width="80" height="90"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="imagePlaceholder" translatesAutoresizingMaskIntoConstraints="NO" id="VPt-RJ-Xya">
+                                                    <rect key="frame" x="30" y="26" width="80" height="84"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="80" id="3C2-ZY-Gn0"/>
                                                         <constraint firstAttribute="height" constant="90" id="IuJ-nW-6Uu"/>
@@ -51,6 +50,8 @@
                                                 <constraint firstItem="VPt-RJ-Xya" firstAttribute="centerY" secondItem="fTW-Gb-EQa" secondAttribute="centerY" id="AAQ-G0-22L"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="gwx-LQ-q92" secondAttribute="bottom" constant="12" id="B4A-O2-026"/>
                                                 <constraint firstItem="gwx-LQ-q92" firstAttribute="centerY" secondItem="fTW-Gb-EQa" secondAttribute="centerY" id="g5c-Qc-2AM"/>
+                                                <constraint firstItem="VPt-RJ-Xya" firstAttribute="top" secondItem="fTW-Gb-EQa" secondAttribute="topMargin" constant="15" id="hhT-0Z-pkU"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="VPt-RJ-Xya" secondAttribute="bottom" constant="15" id="ihM-fJ-d2w"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
@@ -117,11 +118,9 @@
         </scene>
     </scenes>
     <resources>
+        <image name="imagePlaceholder" width="32" height="32"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemGray5Color">
-            <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
