--- a/MovieDB/MovieDB/Base.lproj/Main.storyboard
+++ b/MovieDB/MovieDB/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="jU6-0e-Jkk">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina6_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
@@ -14,29 +14,29 @@
             <objects>
                 <viewController storyboardIdentifier="MoviesListViewController" id="BYZ-38-t0r" customClass="MoviesListViewController" customModule="MovieDB" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="zyx-zo-31B">
-                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <rect key="frame" x="0.0" y="88" width="428" height="804"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="MoviesListItemViewCell" rowHeight="136" id="Z5M-lR-uUc" customClass="MoviesListItemViewCell" customModule="MovieDB" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="136"/>
+                                        <rect key="frame" x="0.0" y="28" width="428" height="136"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Z5M-lR-uUc" id="fTW-Gb-EQa">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="136"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="428" height="136"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="imagePlaceholder" translatesAutoresizingMaskIntoConstraints="NO" id="VPt-RJ-Xya">
-                                                    <rect key="frame" x="30" y="26" width="80" height="84"/>
+                                                    <rect key="frame" x="30" y="23" width="90" height="90"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="80" id="3C2-ZY-Gn0"/>
-                                                        <constraint firstAttribute="height" constant="90" id="IuJ-nW-6Uu"/>
+                                                        <constraint firstAttribute="width" constant="90" id="3C2-ZY-Gn0"/>
+                                                        <constraint firstAttribute="height" constant="100" id="IuJ-nW-6Uu"/>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gwx-LQ-q92">
-                                                    <rect key="frame" x="135" y="23" width="259" height="90"/>
+                                                    <rect key="frame" x="145" y="23" width="263" height="90"/>
                                                     <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="18"/>
                                                     <color key="textColor" red="0.0" green="0.32852089410000002" blue="0.57488495110000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
@@ -50,8 +50,8 @@
                                                 <constraint firstItem="VPt-RJ-Xya" firstAttribute="centerY" secondItem="fTW-Gb-EQa" secondAttribute="centerY" id="AAQ-G0-22L"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="gwx-LQ-q92" secondAttribute="bottom" constant="12" id="B4A-O2-026"/>
                                                 <constraint firstItem="gwx-LQ-q92" firstAttribute="centerY" secondItem="fTW-Gb-EQa" secondAttribute="centerY" id="g5c-Qc-2AM"/>
-                                                <constraint firstItem="VPt-RJ-Xya" firstAttribute="top" secondItem="fTW-Gb-EQa" secondAttribute="topMargin" constant="15" id="hhT-0Z-pkU"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="VPt-RJ-Xya" secondAttribute="bottom" constant="15" id="ihM-fJ-d2w"/>
+                                                <constraint firstItem="VPt-RJ-Xya" firstAttribute="top" secondItem="fTW-Gb-EQa" secondAttribute="topMargin" constant="12" id="hhT-0Z-pkU"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="VPt-RJ-Xya" secondAttribute="bottom" constant="12" id="ihM-fJ-d2w"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
@@ -64,6 +64,7 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="tintColor" red="0.0" green="0.56904578210000001" blue="0.57461684940000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="zyx-zo-31B" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="14V-63-cH1"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="zyx-zo-31B" secondAttribute="trailing" id="46b-61-YzM"/>
@@ -83,13 +84,86 @@
         <!--Movie Details View Controller-->
         <scene sceneID="FfA-9L-kq3">
             <objects>
-                <viewController id="drw-4T-R6j" customClass="MovieDetailsViewController" customModule="MovieDB" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MovieDetailsViewController" id="drw-4T-R6j" customClass="MovieDetailsViewController" customModule="MovieDB" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="GRz-Lg-g4b">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DUw-ba-pFm">
+                                <rect key="frame" x="0.0" y="44" width="428" height="848"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dFY-rK-TNE" userLabel="ContentView">
+                                        <rect key="frame" x="0.0" y="0.0" width="428" height="495"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="imagePlaceholder" translatesAutoresizingMaskIntoConstraints="NO" id="Mlk-U2-DED">
+                                                <rect key="frame" x="64" y="20" width="300" height="400"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="300" id="hQH-DT-IPB"/>
+                                                    <constraint firstAttribute="height" constant="400" id="kkD-96-AOG"/>
+                                                </constraints>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fvW-ky-I9W">
+                                                <rect key="frame" x="214" y="455" width="0.0" height="0.0"/>
+                                                <color key="tintColor" red="0.0" green="0.32852089410000002" blue="0.57488495110000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="25"/>
+                                                <color key="textColor" red="0.0" green="0.32852089410000002" blue="0.57488495110000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G0o-S7-JXN">
+                                                <rect key="frame" x="214" y="495" width="0.0" height="0.0"/>
+                                                <color key="tintColor" red="0.0" green="0.32852089410000002" blue="0.57488495110000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="20"/>
+                                                <color key="textColor" red="0.0" green="0.32852089410000002" blue="0.57488495110000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nLc-fw-fCP">
+                                                <rect key="frame" x="214" y="475" width="0.0" height="0.0"/>
+                                                <color key="tintColor" red="0.0" green="0.32852089410000002" blue="0.57488495110000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="20"/>
+                                                <color key="textColor" red="0.0" green="0.32852089410000002" blue="0.57488495110000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstItem="fvW-ky-I9W" firstAttribute="centerX" secondItem="dFY-rK-TNE" secondAttribute="centerX" id="43t-ce-Tlk"/>
+                                            <constraint firstItem="G0o-S7-JXN" firstAttribute="centerX" secondItem="dFY-rK-TNE" secondAttribute="centerX" id="4x1-zw-z3q"/>
+                                            <constraint firstAttribute="bottom" secondItem="G0o-S7-JXN" secondAttribute="bottom" id="Dxc-d6-fjL"/>
+                                            <constraint firstItem="fvW-ky-I9W" firstAttribute="top" secondItem="Mlk-U2-DED" secondAttribute="bottom" constant="35" id="Niv-Gv-WIf"/>
+                                            <constraint firstItem="nLc-fw-fCP" firstAttribute="top" secondItem="fvW-ky-I9W" secondAttribute="bottom" constant="20" id="OV5-V2-mo9"/>
+                                            <constraint firstItem="nLc-fw-fCP" firstAttribute="centerX" secondItem="dFY-rK-TNE" secondAttribute="centerX" id="Q9T-EZ-0wS"/>
+                                            <constraint firstItem="G0o-S7-JXN" firstAttribute="top" secondItem="nLc-fw-fCP" secondAttribute="bottom" constant="20" id="RSC-zT-iCM"/>
+                                            <constraint firstItem="Mlk-U2-DED" firstAttribute="centerX" secondItem="dFY-rK-TNE" secondAttribute="centerX" id="mgd-Gz-LgU"/>
+                                            <constraint firstItem="Mlk-U2-DED" firstAttribute="top" secondItem="dFY-rK-TNE" secondAttribute="top" constant="20" id="y1z-aC-A9e"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="dFY-rK-TNE" secondAttribute="trailing" id="9QN-PH-oVu"/>
+                                    <constraint firstItem="dFY-rK-TNE" firstAttribute="top" secondItem="DUw-ba-pFm" secondAttribute="top" id="Oir-0v-Q4p"/>
+                                    <constraint firstAttribute="bottom" secondItem="dFY-rK-TNE" secondAttribute="bottom" id="e2q-cH-ybP"/>
+                                    <constraint firstItem="dFY-rK-TNE" firstAttribute="leading" secondItem="DUw-ba-pFm" secondAttribute="leading" id="e7W-qK-dF4"/>
+                                    <constraint firstItem="dFY-rK-TNE" firstAttribute="height" secondItem="DUw-ba-pFm" secondAttribute="height" priority="250" id="jz8-t7-1Hz"/>
+                                    <constraint firstItem="dFY-rK-TNE" firstAttribute="width" secondItem="DUw-ba-pFm" secondAttribute="width" id="kzt-8d-d1q"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="WVQ-w3-HF4"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="tintColor" red="0.0" green="0.56904578210000001" blue="0.57461684940000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="DUw-ba-pFm" firstAttribute="top" secondItem="WVQ-w3-HF4" secondAttribute="top" id="Aed-XU-Lwr"/>
+                            <constraint firstItem="DUw-ba-pFm" firstAttribute="leading" secondItem="WVQ-w3-HF4" secondAttribute="leading" id="Et8-Hn-E63"/>
+                            <constraint firstItem="DUw-ba-pFm" firstAttribute="trailing" secondItem="WVQ-w3-HF4" secondAttribute="trailing" id="aZv-p9-eBA"/>
+                            <constraint firstItem="DUw-ba-pFm" firstAttribute="bottom" secondItem="WVQ-w3-HF4" secondAttribute="bottom" id="wyX-ed-1Hz"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="movieImage" destination="Mlk-U2-DED" id="iLN-JD-W7u"/>
+                        <outlet property="movieRating" destination="G0o-S7-JXN" id="FIn-ZM-iRj"/>
+                        <outlet property="movieReleaseDate" destination="nLc-fw-fCP" id="q4n-qf-DE2"/>
+                        <outlet property="movieTitle" destination="fvW-ky-I9W" id="Bjh-FO-SVk"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MBK-bn-PkF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -101,10 +175,11 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="jU6-0e-Jkk" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="J6x-0k-HMZ">
-                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
+                        <rect key="frame" x="0.0" y="44" width="428" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" red="0.0" green="0.32852089410000002" blue="0.57488495110000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <textAttributes key="largeTitleTextAttributes">
-                            <color key="textColor" red="0.0" green="0.56904578210000001" blue="0.57461684940000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <color key="textColor" red="0.0" green="0.32852089410000002" blue="0.57488495110000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -118,7 +193,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="imagePlaceholder" width="32" height="32"/>
+        <image name="imagePlaceholder" width="21.333333969116211" height="21.333333969116211"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
